--- a/css/game.css
+++ b/css/game.css
@@ -114,6 +114,7 @@
   line-height: inherit;
   padding: 0 0.25em 0 0.25em;
   margin:  0 0.25em 0 0;
+  width: 4ch;
 }
 #pixi-container .standalone-input {
   display: block;
