--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,19 @@
 html {
-  background-color: ghostwhite;
+  background-color: #d3d2cc;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12pt;
   line-height: 1.25;
 }
 
 body {
+  background-color: #fdfdfd;
+  border: 2px solid black;
+  border-top: none;
+  border-bottom: none;
   margin: 0 auto;
   padding: 1em;
   max-width: 720px;
+  min-height: calc(100vh - 2em)
 }
 
 body.wide {
@@ -95,11 +100,11 @@ a:hover {
 
 header h1 {
   margin-top: 0;
-  --smear-gradient-color: indianred;
+  --smear-gradient-color: darkorange;
 }
 
 .resume h2, main > h3 {
-  --smear-gradient-color: cornflowerblue;
+  --smear-gradient-color: mediumseagreen;
 }
 
 main > h2 {
@@ -108,6 +113,7 @@ main > h2 {
 
 .resume h2, header h1, main > h2, main > h3 {
   position: relative;
+  z-index: 1;
 }
 .resume h2::before, header h1::before, main > h2::before, main > h3::before {
   content: "";
