--- a/css/style.css
+++ b/css/style.css
@@ -100,15 +100,15 @@ a:hover {
 
 header h1 {
   margin-top: 0;
-  --smear-gradient-color: #4d77a5;
+  --smear-gradient-color: #7baadd;
 }
 
 .resume h2, main > h3 {
-  --smear-gradient-color: #4d77a5;
+  --smear-gradient-color: #7baadd;
 }
 
 main > h2 {
-  --smear-gradient-color: #4d77a5;
+  --smear-gradient-color: #7baadd;
 }
 
 .resume h2, header h1, main > h2, main > h3 {
@@ -125,6 +125,17 @@ main > h2 {
   background: linear-gradient(to right, var(--smear-gradient-color), transparent);
   opacity: 0.5;
   left: -10px;
+}
+
+header h1::before {
+  width: calc(100% + 2rem);
+  left: -1rem;
+  height: calc(100% + 2rem);
+  top: -1rem;
+  border-bottom: 2px solid #7baadd;
+}
+header h1 {
+  margin-bottom: 1em;
 }
 
 header nav {
