--- a/css/style.css
+++ b/css/style.css
@@ -170,8 +170,89 @@ ul, li {
   line-height: 1.35;
 }
 
+article {
+  line-height: 1.3;
+}
+
+article > img, article > figure > img {
+  max-width: 100%;
+  height: auto;
+  margin: 0 auto;
+  display: block;
+}
+
+article > figure {
+  max-width: 100%;
+  margin: 0 auto;
+}
+article > figure > figcaption {
+  font-size: 10pt;
+  font-style: italic;
+}
+
+ul.semantic {
+  display: block;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+ul.semantic li {
+  margin: 0;
+}
+
+:is(h1, h2, h3) a {
+  text-decoration: none;
+  color: inherit;
+}
+
+time {
+  font-weight: normal;
+  font-style: italic;
+  font-size: 12pt;
+  font-variant-numeric: oldstyle-nums;
+  -moz-font-feature-settings: "onum";
+  -webkit-font-feature-settings: "onum";
+  font-feature-settings: "onum";
+  opacity: 0.8;
+}
+
+.post-link {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  font-size: 14pt;
+  margin: -0.25em 0 0.75em -0.25em;
+  padding: 0.25em 0.25em 0.25em 0.25em;
+  max-width: fit-content;
+  text-decoration: none;
+  text-decoration-thickness: 1px;
+}
+.post-link > .title {
+  font-weight: bold;
+}
+.post-link:hover > .title {
+  text-decoration: underline;
+}
+
+article .byline {
+  margin-top: -0.25em;
+  margin-bottom: 0.25em;
+}
+
 @media only screen and (max-width: 640px) {
   .resume {
     columns: unset;
+  }
+}
+
+@media only screen and (min-width: 401px) {
+  img.mobile-alternative {
+    display: none;
+  }
+}
+@media only screen and (max-width: 400px) {
+  img.mobile-alternative + img:not(.mobile-alternative) {
+    display: none;
   }
 }
